# Paper2-ntt-security-margins-arXiv-2604.03813

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  reproduce.py  requirements.txt
evidence/: ablation_results.json  ablation_tier123.json  all_k4_configs.json  composite_margin.json  convergence_results.json  damping_sensitivity.json  exp_f_2layer_bp.json  exp_h_monte_carlo.json  factor_graph_metrics.json  genie_bound.json  key_enumeration_results.json  nc1_moonshot_results.json  nc3_fourier_proof.json  nc3_proof.json  nc4_validation.json  paper_proofs.json  sweep_results.json
experiments/: exp_a_factor_graph.py  exp_b_lattice.py  exp_c_rsi_shuffling.py  exp_d_rtl_constants.py  exp_e_template_bridge.py  exp_f_2layer_bp.py  exp_g_composite_margin.py  exp_h_monte_carlo.py  exp_i_ablation.py  exp_i_convergence.py  exp_i_damping.py  exp_i_fips203_verify.py  exp_i_full_scale_sweep.py  exp_i_genie_bound.py  exp_i_key_enumeration.py  exp_i_nc1_barrier.py  exp_i_nc4_validation.py
paper/: README.md
paper/arxiv/: README.md
paper/correspondence/: README.md
paper/manuscripts/: README.md
paper/tex/: README.md
proofs/: README.md  T1_value_independence_distributional.py  T2_boolean_reparametrization_round_trip.py  T3_arithmetic_reparametrization_round_trip.py  T4_no_overflow_assertion.py  T5_mlkem_bias_ratio.py  T6_small_instance_value_independence.py  _proof_utils.py  nc3_fourier_contraction.py  paper_formal_proofs.py  run_all_proofs.py
src/ntt_bp/: __init__.py  belief_propagation.py  (+3 more)
tests/: test_factor_graph.py  test_statistics.py
(+30 files in other folders)
