[project]
name = "ntt-security-margins"
version = "1.0.0"
description = "Artifact repository for 'Partial NTT Masking in PQC Hardware: A Security Margin Analysis' (arXiv:2604.03813)"
authors = [
    { name = "Ray Iskander" },
    { name = "Khaled Kirah" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "scipy>=1.10",
    "z3-solver>=4.12",
    "networkx>=3.0",
]

[project.optional-dependencies]
lattice = ["fpylll>=0.6"]
dev = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
